<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">



    <TextView
        android:id="@+id/dayofweek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:text="@string/monday"
        android:textAlignment="center"
        android:textColor="#9C27B0"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/grade"
            android:textColor="#000000"
            android:textStyle="bold" />

        <Button
            android:id="@+id/mgrade"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_weight="1"

            android:background="@android:color/transparent"
            android:padding="0dp"
            android:text="@string/grade_10_english_medium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/time"
            android:textColor="#000000"
            android:textStyle="bold" />

        <Button
            android:id="@+id/mtime"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:padding="0dp"
            android:text="@string/_3_30_pm_5_30_pm" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/institute"
            android:textColor="#000000"
            android:textStyle="bold" />

        <Button
            android:id="@+id/minstitute"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:padding="0dp"
            android:text="@string/osis_maharagama" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/classst"
            android:textColor="#000000"
            android:textStyle="bold" />

        <Button
            android:id="@+id/mclass"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:padding="0dp"
            android:text="@string/theory_paper" />

    </LinearLayout>

    <Button
        android:id="@+id/deleteclass"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_background"
        android:text="@string/delete"
        android:textColor="@color/common_google_signin_btn_text_dark_default" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="#4E229C" />




</LinearLayout>