<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
   >

    <TextView
        android:id="@+id/cmt_user"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/name"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/cmt_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/i_have_a_problem" />

    <ImageView
        android:id="@+id/cmt_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/todo" />

    <ListView
        android:id="@+id/recyclerviewreply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="10dp"
        android:divider="@null"
        android:focusable="false"
        android:focusableInTouchMode="false" />


</LinearLayout>