<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image_event"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/button_states" />

    <TextView
        android:id="@+id/title_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:text="@string/eventtitle"
        android:textColor="#492C7A"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/time_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/eventtime" />

    <TextView
        android:id="@+id/descrip_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:text="@string/eventdesc"
        android:textColor="#0E867B"
        android:textStyle="italic" />

    <Button
        android:id="@+id/delete_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="230dp"
        android:text="Delete"
        android:textColor="#F44336" />
</LinearLayout>