<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.wonder.eclasskit.AddNewCourse">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_maincourse"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true">


        <Button
            android:id="@+id/save_ftcourse"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="center|end"
            android:layout_marginEnd="10dp"
            android:background="@drawable/button_background"
            android:text="@string/save"
            android:textColor="@color/common_google_signin_btn_text_dark_default" />

        <EditText
            android:id="@+id/class_yr_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginStart="20dp"
            android:hint="@string/class_year"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/sub_name_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/first_course"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/other_courses"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/add_newclass_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:divider="@null" />
</LinearLayout>
