<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".StudentAccount">

        <EditText
        android:id="@+id/enroll_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:ems="10"
        android:hint="@string/enter_enrollment_key"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColorHint="#610D0D"
            android:importantForAutofill="no" />

    <Button
        android:id="@+id/enroll_btn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_background"
        android:text="@string/enroll"
        android:textColor="@color/common_google_signin_btn_text_dark_default" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/my_courses"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/listView_Courses"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:divider="@null" />
</LinearLayout>