<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".quizMain">



    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/flag_imgbtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/todo"
                app:srcCompat="@mipmap/flag_foreground" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/time_left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="end"
                    android:text="@string/time_left"
                    android:textColor="#000000" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerquizlist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp">

            </androidx.recyclerview.widget.RecyclerView>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/quiztablayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabMode="scrollable"/>

            <com.wonder.eclasskit.Adpter.DynamicHeightViewPager
                android:id="@+id/quizviewpager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/delete_quest"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:background="@android:color/transparent"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:text="@string/delete" />

            <Button
                android:id="@+id/addnew_quest"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button_background"
                android:text="@string/next" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>